# aia_team_8_stocks_rag

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  agent_orchestrator.py  basic_stock_analysis.py  expert_video_analysis.py  generation.py  institutional_trading_analysis.py  long_short_analysis.py  morris_chang_analysis.py  vector_store.py  video_data_handling.py
data/: data_used.json
